# shardproxy

./: COPYRIGHT  Makefile  NEWS.rst  README.rst  demo.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
doc/: conf.py  index.rst
etc/: requirements.uv.in  requirements.uv.txt  showfiles.sh
src/shardproxy/: __init__.py  ops.py  proxy.py  types.py
tests/: helpers.py  test_ops.py  test_proxy.py
