[project]
name = "shardproxy"
version = "1.0.0"
description = "Sharding with SQLAlchemy"
readme = "README.rst"
license = "ISC"
license-files = ["COPYRIGHT"]
authors = [{ name = "Marko Kreen", email = "markokr@gmail.com" }]
classifiers = [
    "Topic :: Database",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = ["sqlalchemy[asyncio]>=2.0"]

[project.urls]
homepage = "https://pypi.org/project/shardproxy/"
source = "https://github.com/archisle/shardproxy"
issues = "https://github.com/archisle/shardproxy/issues"
changelog = "https://github.com/archisle/shardproxy/blob/master/NEWS.rst"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]
docs = ["sphinx"]
lint = ["ruff", "isort", "mypy"]
test = [
    "asyncpg",
    "psycopg[binary,pool]",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "coverage",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_decorated = true
disallow_any_unimported = true
#disallow_any_explicit = true
#disallow_any_expr = true

[tool.isort]
known_first_party = ["shardproxy"]
known_local_folder = ["helpers"]
multi_line_output = 5
balanced_wrapping = true
include_trailing_comma = true
atomic = true
quiet = true

